# RikkiPatcher

./: .gitignore  CMakeLists.txt  README.md
cmake/: 7zip.cmake  consolestream.cmake  json.cmake  sha.cmake  threadpool.cmake  webview.cmake
res/: LICENSE.txt  index.html
res/lang/: en_US.json  ko_KR.json
res/scripts/: control.js  format.js  index.js  logger.js
res/styles/: console.css  control.css  fonts.css  index.css
src/: main.cpp  precompiled.hpp
src/exception/: rixception.cpp  rixception.hpp
src/lang/: lang.cpp  lang.hpp
src/rikki/: config.cpp  config.hpp  config_keys.hpp  dialogue.cpp  dialogue.hpp  dir_mgr.cpp  dir_mgr.hpp  dir_mgr_enum.hpp  patcher.cpp  patcher.hpp
src/rikki/data/: data_path.cpp  data_path.hpp  dialogue.cpp  dialogue.hpp  i_data.cpp  i_data.hpp  ui.cpp  ui.hpp  ui_json.hpp  ui_key.hpp
src/rikki/extractor/: copy_extractor.cpp  copy_extractor.hpp  dialogue_extractor.cpp  dialogue_extractor.hpp  (+6 more)
src/utils/: dialog_util.cpp  dialog_util.hpp  dialogue_util.cpp  dialogue_util.hpp  filesystem_util.cpp  filesystem_util.hpp  hash_util.cpp  hash_util.hpp  instance_factory.hpp  json_util.cpp  json_util.hpp  logger.cpp  logger.hpp  registry_reader.cpp  registry_reader.hpp  sevenzip_util.cpp  sevenzip_util.hpp  string_util.cpp  string_util.hpp  temp_dir_mutex.cpp  temp_dir_mutex.hpp  ui_text_util.cpp  ui_text_util.hpp  worker.cpp  worker.hpp  zip_util.cpp  zip_util.hpp
src/wv/: enums.hpp  wv_args_parser.cpp  wv_args_parser.hpp  wv_binder.cpp  wv_binder.hpp  wv_invoker.cpp  wv_invoker.hpp  wv_log_fmt.hpp  wv_mgr.cpp  wv_mgr.hpp
(+103 files in other folders)
